Added User guide and dependencies

--- a/flaskProject/templates/Help.html
+++ b/flaskProject/templates/Help.html
@@ -4,19 +4,234 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Help</h1>
-    <p>This is meant to have FAQs</p>
-    <h3>FAQ1</h3>
-    <p>FAQ answer</p>
-    <h3>FAQ2</h3>
-    <p>FAQ2 answer</p>
-    <h3>FAQ3</h3>
-    <p>FAQ3 answer</p>
-    <h3>FAQ4</h3>
-    <p>FAQ4 answer</p>
-    <h3>FAQ5</h3>
-    <p>FAQ5 answer</p>
-    <!-- content goes here -->
+    <h3>User Guide</h3>
 
+    <h4>How to navigate to the app</h4>
+    <ul>
+        <li>
+            In all pages there is a menu in the right side
+            just click in the desire page to visit
+        </li>
+    </ul>
+
+    <h4>Set up content view</h4>
+        <p>In this page we have:</p>
+    <ul>
+        <li>Analyst Initials (i.e JM)</li>
+        <li>Choose between two options:
+            <p>If user select create event ip address is not required and you are going
+                to be directed to the Create Event page</p>
+            <p>If the user select first time sync with the lead analyst ip address is gonna
+                be required and you are gonna be directed to Event overview page</p>
+            <p>The lead analyst Ip address is formatted as follows 0.0.0.0
+        </li>
+    </ul>
+
+    <h4>Create Event</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Edit event</li>
+        <li>Archive event</li>
+        <li>Ask for help</li>
+        <li>Add analysts</li>
+        <li>Delete Analysts</li>
+        <li>Add systems
+            <p>Archive systems</p>
+            <p>We can see the progress of the systems</p>
+            <p>Click on systems to expand and see more information</p>
+        </li>
+    </ul>
+
+    <!-- Needs to be edited -->
+    <h4>Systems</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Edit event</li>
+        <li>Archive event</li>
+        <li>Ask for help</li>
+        <li>Add analysts</li>
+        <li>Delete Analysts</li>
+        <li>Add systems
+            <p>Archive systems</p>
+            <p>We can see the progress of the systems</p>
+            <p>Click on systems to expand and see more information</p>
+        </li>
+    </ul>
+
+    <h4>Tasks</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Archive event</li>
+        <li>Demote event</li>
+        <li>See a brief description of the tasks listed</li>
+        <li>Check for progress</li>
+        <li>Click on a task to be redirected to the task detailed view page</li>
+    </ul>
+
+    <h4>Tasks detailed view</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Edit task</li>
+        <li>Check for all attributes of the task</li>
+        <li>Add a subtask</li>
+        <li>See a list of the subtasks with a brief description
+            <p>Check if the subtask has been completed</p>
+            <p>Archive subtask</p>
+            <p>Promote subtask</p>
+        </li>
+        <li>Click on a subtask to be redirected to the subtask detailed view page</li>
+    </ul>
+
+    <h4>Subtask detailed view</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Edit subtask</li>
+        <li>Check for all attributes of the subtask</li>
+        <li>Check for progress of the subtasks</li>
+        <li>Who participated on the subtask</li>
+        <li>Cjeck when the subtask is due</li>
+    </ul>
+
+    <h4>Findings overview</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Add finding</li>
+        <li>Create ERB report</li>
+        <li>Create Risk Matrix</li>
+        <li>Create final report</li>
+        <li>See a list of findings
+            <p>Delete findings</p>
+        </li>
+        <li>Click on a finding to be redirected to the finding overview</li>
+    </ul>
+
+    <h4>Finding overview</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>See all attributes of the finding selected</li>
+        <li>Edit finding</li>
+    </ul>
+
+    <h4>Archive content view</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Restore archive tasks</li>
+        <li>Restore archive subtasks</li>
+        <li>Restore archive findings</li>
+        <li>Restore archive systems</li>
+        <li>See a list of findings
+            <p>Delete findings</p>
+        </li>
+        <li>Click on a finding to be redirected to the finding overview</li>
+    </ul>
+
+    <h4>Archive content view</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>See the privileges by access level</li>
+        <li>See finding type table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See posture table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See threat level table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See impact level table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See finding classification table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See countermeasure table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See event classification table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See level table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See event type table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See finding impact table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See severity category code table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See a progress table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See event rules table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See report templates table
+            <p>Risk matrix and final technical report table</p>
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+        <li>See notification table
+            <p>Add row</p>
+            <p>Delete row</p>
+            <p>Edit row</p>
+        </li>
+    </ul>
+
+    <h4>Sync</h4>
+        <p>In this page we can:</p>
+    <ul>
+        <li>Select who to sync with</li>
+        <li>Add ip address</li>
+        <li>Add analyst initials
+            <p>Add their ip address</p>
+            <p>Delete analyst</p>
+        </li>
+        <li>Click to sync with the desire analyst</li>
+    </ul>
+
+    <h3>Developer Guide</h3>
+    <h4>Dependencies and how to install them</h4>
+    <h4>Flask</h4>
+        <ul><li>How to install: <p>pip install flask</p></li></ul>
+    <h4>Flask-wtf</h4>
+        <ul><li>How to install: <p>pip install flask-wtf</p></li></ul>
+    <h4>Bootstrap</h4>
+        <ul><li>How to install: <p>pip install bootstrap</p></li></ul>
+    <h4>Pymongo</h4>
+    <ul><li>How to install: <p>pip install pymongo</p></li></ul>
+    <h4>HTML5</h4>
+
+<!-- content goes here -->
 {% endblock %}
 
 {% block sidebar %}
