added functionality to archive systems

--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -9,7 +9,7 @@
     <form method=post>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EditEvent') }}">Edit event</a></button>
         <button type="submit" value="submit" name="ArchiveEvent" class="btn btn-secondary">Archive event</button>
-        <button type="submit" class="btn btn-secondary"><a>Help</a></button>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('Help') }}">Help</a></button>
     </form>
 
     <h3>Event Basic Information</h3>
