--- a/flaskProject/templates/CreateSystem.html
+++ b/flaskProject/templates/CreateSystem.html
@@ -56,7 +56,7 @@
             {{ form.systemDescription(class_="form-control") }}
         </div>
         <button type="submit" class="btn btn-secondary" name="createSystem">Create</button>
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EventView') }}">Cancel</a></button>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('Systems') }}">Cancel</a></button>
     </form>
     <br>
 {% endblock content %}
