--- a/flaskProject/templates/layout.html
+++ b/flaskProject/templates/layout.html
@@ -25,6 +25,18 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand">FRIC</a>
+                <!-- Links -->
+{#                <ul class="navbar-nav">#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">/Link 1</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">/Link 2</a>#}
+{#                    </li>#}
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">/Link 3</a>#}
+{#                    </li>#}
+{#                </ul>#}
             </div>
         </div>
     </nav>
