--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -64,7 +64,7 @@
     <!-- loop through the list of initials that event.getEventTeam() retrieves  and display them along with a delete button-->
     {% for initial in event.getEventTeam() %}
         <ul>
-            <li>
+            <li style="list-style-type: circle">
                 <form action="{{ url_for('deleteAnalyst', initial=initial) }}" method=post>
                     {{ initial }}
                     <input type="hidden" value="{{ initial }}">
@@ -75,35 +75,35 @@
     {% endfor %}
     <hr>
 
-{#    <h3>Systems Table Overview</h3>#}
-{#    <button type="submit" class="btn btn-secondary"><a href="{{ url_for('CreateSystem') }}">Add system</a></button>#}
-{#    <hr>#}
-{#    <div class="list-group">#}
-{#        {% for system in systemList %}#}
-{#            <div class="list-group-item list-group-item-action flex-column flex-fill align-items-start">#}
-{#                <br>#}
-{#                <div class="d-flex w-100 p-3 flex-fill justify-content-between">#}
-{#                    <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">#}
-{#                        <h5 class="mb-1">{{ system.getName() }}</h5>#}
-{#                    </a>#}
-{#                    <small>No. of Tasks: 4 </small>#}
-{#                    <b>|</b>#}
-{#                    <small>No. of Findings: 2</small>#}
-{#                </div>#}
-{#                <p class="mb-1">{{ system.getDescription() }}</p>#}
-{#                <h5>Progress:</h5>#}
-{#                <div class="progress">#}
-{#                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"#}
-{#                         aria-valuemin="0"#}
-{#                         aria-valuemax="100">25%#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="custom-control custom-checkbox mb-4">#}
-{#                    <button type="submit" class="btn btn-secondary"><a href="">Archive System</a></button>#}
-{#                </div>#}
-{#            </div>#}
-{#        {% endfor %}#}
-{#    </div>#}
+    {#    <h3>Systems Table Overview</h3>#}
+    {#    <button type="submit" class="btn btn-secondary"><a href="{{ url_for('CreateSystem') }}">Add system</a></button>#}
+    {#    <hr>#}
+    {#    <div class="list-group">#}
+    {#        {% for system in systemList %}#}
+    {#            <div class="list-group-item list-group-item-action flex-column flex-fill align-items-start">#}
+    {#                <br>#}
+    {#                <div class="d-flex w-100 p-3 flex-fill justify-content-between">#}
+    {#                    <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">#}
+    {#                        <h5 class="mb-1">{{ system.getName() }}</h5>#}
+    {#                    </a>#}
+    {#                    <small>No. of Tasks: 4 </small>#}
+    {#                    <b>|</b>#}
+    {#                    <small>No. of Findings: 2</small>#}
+    {#                </div>#}
+    {#                <p class="mb-1">{{ system.getDescription() }}</p>#}
+    {#                <h5>Progress:</h5>#}
+    {#                <div class="progress">#}
+    {#                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"#}
+    {#                         aria-valuemin="0"#}
+    {#                         aria-valuemax="100">25%#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#                <div class="custom-control custom-checkbox mb-4">#}
+    {#                    <button type="submit" class="btn btn-secondary"><a href="">Archive System</a></button>#}
+    {#                </div>#}
+    {#            </div>#}
+    {#        {% endfor %}#}
+    {#    </div>#}
 {% endblock content %}
 
 {% block sidebar %}
