--- a/flaskProject/templates/Systems.html
+++ b/flaskProject/templates/Systems.html
@@ -12,7 +12,7 @@
                 <br>
                 <div class="d-flex w-100 p-3 flex-fill justify-content-between">
                     <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">
-                        <h5 class="mb-1">{{ system.getName() }}</h5>
+                        <h4 class="mb-1">{{ system.getName() }}</h4>
                     </a>
                     <small>No. of Tasks: 4 </small>
                     <b>|</b>
@@ -28,8 +28,7 @@
                 </div>
                 <div class="custom-control custom-checkbox mb-4">
                     <form action="{{ url_for('ArchiveSystem', system=system.getId()) }}" method=post>
-
-                        <button type="submit" class="btn btn-secondary">Archive System</a></button>
+                        <button type="submit" class="btn btn-secondary">Archive System</button>
                     </form>
                 </div>
             </div>
@@ -50,7 +49,8 @@
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Tasks') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Subtasks') }}"> Subtasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('FindingsView') }}"> Findings</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}"> Archive</a>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}"> Archive
+                Contents</a>
             </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('ConfigurationContentView') }}">
                 Configuration</a></li>
