--- a/flaskProject/templates/layout.html
+++ b/flaskProject/templates/layout.html
@@ -21,9 +21,9 @@
 {% endblock %}
 
 {% block body %}
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
+            <div class="navbar-header ">
                 <a class="navbar-brand">FRIC</a>
                 <!-- Links -->
 {#                <ul class="navbar-nav">#}
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <main role="main" class="container">
+    <main role="main" class="container" style="padding-top: 100px">
         <!-- main content goes here -->
         <div class="row">
             <div class="col-md-8">
