--- a/flaskProject/templates/ArchiveContentView.html
+++ b/flaskProject/templates/ArchiveContentView.html
@@ -11,9 +11,9 @@
             <div class="list-group-item list-group-item-action flex-column flex-fill align-items-start">
                 <br>
                 <div class="d-flex w-100 p-3 flex-fill justify-content-between">
-                    <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">
+{#                    <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">#}
                         <h4 class="mb-1">{{ system.getName() }}</h4>
-                    </a>
+{#                    </a>#}
                     <small>No. of Tasks: 4 </small>
                     <b>|</b>
                     <small>No. of Findings: 2</small>
@@ -28,9 +28,8 @@
                 </div>
                 <div class="custom-control custom-checkbox mb-4">
                     <form action="{{ url_for('RestoreSystem', system=system.getId()) }}" method=post>
-                        <button type="submit" class="btn btn-secondary">Archive System</button>
+                        <button type="submit" class="btn btn-secondary">Restore System</button>
                     </form>
-                    <button type="submit" class="btn btn-secondary"><a href="">Restore System</a></button>
                 </div>
             </div>
         {% endfor %}
