--- a/flaskProject/templates/SetupContentView.html
+++ b/flaskProject/templates/SetupContentView.html
@@ -7,8 +7,8 @@
         <form id="form" action="" method="post">
             <div>
                 <h1>Finding and Reporting Information Console (FRIC)</h1>
-                {% if error %}
-                    <p class="alert-danger form-control"> {{ error }}</p>
+                {% if notEventError %}
+                    <p class="alert-danger form-control"> {{ notEventError }}</p>
                 {% endif %}
             </div>
             <fieldset>
